Fix alignment issues with wide and full blocks for front page.

--- a/sass/blocks/_blocks.scss
+++ b/sass/blocks/_blocks.scss
@@ -77,6 +77,24 @@
 	}
 }
 
+// Wide and full widths need adjustment for the homepage
+.newspack-front-page {
+	.entry .entry-content > * {
+		&.alignwide {
+			@include media(tablet) {
+				margin-left: calc(25% - 25vw);
+				margin-right: calc(25% - 25vw);
+			}
+		}
+		&.alignfull {
+			@include media(tablet) {
+				margin-left: calc(50% - 50vw);
+				margin-right: calc(50% - 50vw);
+			}
+		}
+	}
+}
+
 /*
  * Unset nested content selector styles
  * - Prevents layout styles from cascading too deeply
@@ -84,7 +102,6 @@
  */
 .entry .entry-content,
 .entry .entry-summary {
-
 	.entry-content,
 	.entry-summary,
 	.entry {
@@ -101,7 +118,6 @@
 }
 
 .entry .entry-content {
-
 	//! Paragraphs
 	p.has-background {
 		padding: 20px 30px;
@@ -109,7 +125,6 @@
 
 	//! Audio
 	.wp-block-audio {
-
 		width: 100%;
 
 		audio {
@@ -118,7 +133,6 @@
 
 		&.alignleft audio,
 		&.alignright audio {
-
 			max-width: (0.33 * $mobile_width);
 
 			@include media(tablet) {
@@ -133,7 +147,6 @@
 
 	//! Video
 	.wp-block-video {
-
 		video {
 			width: 100%;
 		}
@@ -141,7 +154,6 @@
 
 	//! Button
 	.wp-block-button {
-
 		.wp-block-button__link {
 			@include button-transition;
 			border: none;
@@ -151,7 +163,7 @@
 			box-sizing: border-box;
 			font-weight: bold;
 			text-decoration: none;
-			padding: ($size__spacing-unit * .76) $size__spacing-unit;
+			padding: ($size__spacing-unit * 0.76) $size__spacing-unit;
 			outline: none;
 			outline: none;
 
@@ -220,7 +232,7 @@
 			font-size: calc(#{$font__size_base} * #{$font__size-ratio});
 			font-weight: bold;
 			line-height: $font__line-height-heading;
-			padding-bottom: ( .75 * $size__spacing-unit );
+			padding-bottom: (0.75 * $size__spacing-unit);
 
 			&.menu-item-has-children,
 			&:last-child {
@@ -235,7 +247,6 @@
 
 	.wp-block-archives,
 	.wp-block-categories {
-
 		&.aligncenter {
 			text-align: center;
 		}
@@ -243,9 +254,8 @@
 
 	//! Latest categories
 	.wp-block-categories {
-
 		ul {
-			padding-top: ( .75 * $size__spacing-unit );
+			padding-top: (0.75 * $size__spacing-unit);
 		}
 
 		li ul {
@@ -264,13 +274,13 @@
 			margin-bottom: (2 * $size__spacing-unit);
 			a {
 				&:after {
-					content: '';
+					content: "";
 				}
 			}
 			&:last-child {
 				margin-bottom: auto;
 				a:after {
-					content: '';
+					content: "";
 				}
 			}
 		}
@@ -310,8 +320,8 @@
 		blockquote {
 			color: $color__text-main;
 			border: none;
-			margin-top: calc(4 * #{ $size__spacing-unit});
-			margin-bottom: calc(4.33 * #{ $size__spacing-unit});
+			margin-top: calc(4 * #{$size__spacing-unit});
+			margin-bottom: calc(4.33 * #{$size__spacing-unit});
 			margin-right: 0;
 			padding-left: 0;
 		}
@@ -417,17 +427,20 @@
 
 			&.alignright,
 			&.alignleft {
-
 				@include media(tablet) {
-					padding: $size__spacing-unit calc(2 * #{$size__spacing-unit});
+					padding: $size__spacing-unit
+						calc(2 * #{$size__spacing-unit});
 				}
 			}
 
 			&.alignfull {
-
 				@include media(tablet) {
-					padding-left: calc(10% + 58px + (2 * #{$size__spacing-unit}));
-					padding-right: calc(10% + 58px + (2 * #{$size__spacing-unit}));
+					padding-left: calc(
+						10% + 58px + (2 * #{$size__spacing-unit})
+					);
+					padding-right: calc(
+						10% + 58px + (2 * #{$size__spacing-unit})
+					);
 				}
 			}
 		}
@@ -435,7 +448,6 @@
 
 	//! Blockquote
 	.wp-block-quote {
-
 		&:not(.is-large),
 		&:not(.is-style-large) {
 			border-width: 2px;
@@ -492,13 +504,11 @@
 
 	//! Image
 	.wp-block-image {
-
 		img {
 			display: block;
 		}
 
 		.aligncenter {
-
 			@include media(tablet) {
 				margin: 0;
 
@@ -508,7 +518,6 @@
 			}
 
 			@include media(desktop) {
-
 				img {
 					margin: 0 auto;
 				}
@@ -562,7 +571,6 @@
 		}
 
 		&.alignfull {
-
 			.wp-block-cover-image-text,
 			.wp-block-cover-text,
 			h2 {
@@ -570,7 +578,6 @@
 			}
 
 			@include media(tablet) {
-
 				.wp-block-cover-image-text,
 				.wp-block-cover-text,
 				h2 {
@@ -609,7 +616,7 @@
 		font-size: $font__size-xs;
 		line-height: $font__line-height-pre;
 		margin: 0;
-		padding: ( $size__spacing-unit * .5 );
+		padding: ($size__spacing-unit * 0.5);
 		text-align: center;
 	}
 
@@ -647,7 +654,6 @@
 		 * is followed by an H1, or H2 */
 		& + h1,
 		& + h2 {
-
 			&:before {
 				display: none;
 			}
@@ -661,7 +667,6 @@
 
 	//! Table
 	.wp-block-table {
-
 		th,
 		td {
 			border-color: $color__text-light;
@@ -683,14 +688,15 @@
 			line-height: $font__line-height-heading;
 			text-decoration: none;
 			font-weight: bold;
-			padding: ($size__spacing-unit * .75) $size__spacing-unit;
+			padding: ($size__spacing-unit * 0.75) $size__spacing-unit;
 			color: #fff;
 			margin-left: 0;
 			margin-top: calc(0.75 * #{$size__spacing-unit});
 
 			@include media(desktop) {
 				font-size: $font__size-base;
-				padding: ($size__spacing-unit * .875) ($size__spacing-unit * 1.5);
+				padding: ($size__spacing-unit * 0.875)
+					($size__spacing-unit * 1.5);
 			}
 
 			&:hover {
@@ -713,13 +719,12 @@
 		code {
 			font-size: $font__size-md;
 			white-space: pre-wrap;
-    	                word-break: break-word;
+			word-break: break-word;
 		}
 	}
 
 	//! Columns
 	.wp-block-columns {
-
 		&.alignfull {
 			padding-left: $size__spacing-unit;
 			padding-right: $size__spacing-unit;
@@ -731,7 +736,6 @@
 
 		@include media(tablet) {
 			.wp-block-column > * {
-
 				&:first-child {
 					margin-top: 0;
 				}
@@ -741,7 +745,7 @@
 				}
 			}
 
-			&[class*='has-'] > * {
+			&[class*="has-"] > * {
 				margin-right: $size__spacing-unit;
 
 				&:last-child {
@@ -759,7 +763,6 @@
 
 	//! Latest Comments
 	.wp-block-latest-comments {
-
 		.wp-block-latest-comments__comment-meta {
 			font-family: $font__heading;
 			font-weight: bold;
@@ -776,18 +779,15 @@
 		}
 
 		&.has-avatars {
-
 		}
 
 		&.has-dates {
-
 			.wp-block-latest-comments__comment-date {
 				font-size: $font__size-xs;
 			}
 		}
 
 		&.has-excerpts {
-
 		}
 	}
 
@@ -821,7 +821,6 @@
 	.has-primary-variation-background-color,
 	.has-secondary-background-color,
 	.has-secondary-variation-background-color {
-
 		// Use white text against these backgrounds by default.
 		color: $color__background-body;
 
@@ -875,7 +874,7 @@
 
 	.has-white-background-color,
 	.wp-block-pullquote.is-style-solid-color.has-white-background-color {
-		background-color: #FFF;
+		background-color: #fff;
 	}
 
 	//! Custom foreground colors
@@ -886,8 +885,11 @@
 	}
 
 	.has-primary-variation-color,
-	.wp-block-pullquote.is-style-solid-color blockquote.has-primary-variation-color,
-	.wp-block-pullquote.is-style-solid-color blockquote.has-primary-variation-color p {
+	.wp-block-pullquote.is-style-solid-color
+		blockquote.has-primary-variation-color,
+	.wp-block-pullquote.is-style-solid-color
+		blockquote.has-primary-variation-color
+		p {
 		color: $color__primary-variation;
 	}
 
@@ -898,13 +900,16 @@
 	}
 
 	.has-secondary-variation-color,
-	.wp-block-pullquote.is-style-solid-color blockquote.has-secondary-variation-color,
-	.wp-block-pullquote.is-style-solid-color blockquote.has-secondary-variation-color p {
+	.wp-block-pullquote.is-style-solid-color
+		blockquote.has-secondary-variation-color,
+	.wp-block-pullquote.is-style-solid-color
+		blockquote.has-secondary-variation-color
+		p {
 		color: $color__secondary-variation;
 	}
 
 	.has-white-color,
 	.wp-block-pullquote.is-style-solid-color blockquote.has-white-color {
-		color: #FFF;
+		color: #fff;
 	}
 }
